--- a/langchain-agent/package.json
+++ b/langchain-agent/package.json
@@ -18,6 +18,7 @@
     "@langchain/core": "^0.3.17",
     "@langchain/langgraph": "^0.2.20",
     "dotenv": "^16.4.5",
+    "starknet": "^6.11.0",
     "zod": "^3.23.8"
   }
 }
