news summary loop

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ANTHROPIC_API_KEY=sk-ant...
+OPENAI_API_KEY=sk-proj...
 STARKNET_ACCOUNT_ADDRESS=0x...
 STARKNET_PRIVATE_KEY=0x...
 RPC_URL=https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_7/UiB8n0FBudlTFaqo7pwvNci7e8JzZS9P
