--- a/langchain-agent/package.json
+++ b/langchain-agent/package.json
@@ -17,6 +17,7 @@
     "@langchain/anthropic": "^0.3.7",
     "@langchain/core": "^0.3.17",
     "@langchain/langgraph": "^0.2.20",
+    "@langchain/openai": "^0.3.12",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "rss-parser": "^3.13.0",
