--- a/langchain-agent/package.json
+++ b/langchain-agent/package.json
@@ -22,6 +22,7 @@
     "ethers": "^6.13.4",
     "rss-parser": "^3.13.0",
     "starknet": "^6.11.0",
+    "telegraf": "^4.16.3",
     "zod": "^3.23.8"
   }
 }
