--- a/langchain-agent/package.json
+++ b/langchain-agent/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_OPTIONS='--loader ts-node/esm --no-warnings' node agent_langchain.ts",
+    "start": "NODE_OPTIONS='--loader ts-node/esm --no-warnings' node agent.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
