--- a/langchain-agent/tsconfig.json
+++ b/langchain-agent/tsconfig.json
@@ -13,6 +13,6 @@
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
-  "include": ["*.ts", "tg_bot/bot.ts"],
+  "include": ["*.ts"],
   "exclude": ["node_modules"]
 } 
